--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
 body {
 background-image: url(../src/assets/bg.jpg);
 }
+
+.head {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    gap: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 5rem;
+    flex-wrap: wrap;
+}
+.logos{
+    border-radius: 1rem;
+    width: 8rem;
+
+}
